--- a/src/components/Hall13Section/Hall13Section.module.css
+++ b/src/components/Hall13Section/Hall13Section.module.css
@@ -1,6 +1,6 @@
 .section {
   width: 100%;
-  height: 100vh;
+  height: calc(var(--avh, 1vh) * 100);
   position: relative;
   overflow: hidden;
   padding: 0.5em;
@@ -26,7 +26,7 @@
 @media screen and (max-width: 767px) {
   .section {
     padding: 0;
-    height: 100svh;
+    height: calc(var(--avh, 1vh) * 100);
   }
 
   .banner {
