--- a/src/components/HerstelSection/HerstelSection.module.css
+++ b/src/components/HerstelSection/HerstelSection.module.css
@@ -3,7 +3,7 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 100vh;
+  height: calc(var(--avh, 1vh) * 100);
   overflow: hidden;
 }
 
@@ -111,7 +111,7 @@
   }
 
   .imageContainer {
-    height: 100svh;
+    height: calc(var(--avh, 1vh) * 100);
     order: 2;
     padding: 0;
   }
